syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.example.dto";
option java_outer_classname = "dtos";

package dto;

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}