syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.example.mutiny";
option java_outer_classname = "MutinyHelloWorldProto";

package helloworld_mutiny;

import "dto.proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (dto.HelloRequest) returns (dto.HelloReply) {}
}
